# anamnesis

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  __main__.py  authorization.py  cli.py  discovery.py  encryption.py  filesystem.py  index.py  models.py  parser_adapters.py  parser_common.py  parser_copilot.py  parser_documents.py  parsers.py  pyproject.toml  registry.py  service.py  session_schema.py  web_ui.py
docs/: anamnesis_podcast_claim_audit.md  anamnesis_podcast_script_audio.md  ide-extensions.md  manual-export-guidance.md  parser-adapters.md  privacy-model.md  product-brief.md  source-access-matrix.md  web-ui.md
skills/assistant-task-intake/: SKILL.md
tests/: test_anamnesis_mvp.py  test_archive_safety.py  test_cli_discover_guidance.py  test_parser_adapters.py  test_policy_consent.py
