[project]
name = "anamnesis"
version = "0.1.0"
description = "Local-first AI session archaeology and search"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Anamnesis maintainers"}]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Utilities",
]
dependencies = []

[project.scripts]
anamnesis = "anamnesis.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["anamnesis"]
package-dir = {"anamnesis" = "."}
license-files = ["LICENSE"]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
